--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 #navbar li a:hover {
-    color: white;   
+    color: white;
 }
 
 #navigation li {
@@ -86,8 +86,36 @@ body {
 
 #img-banner {
     display: block;
-    width: 1400px;
-    height: 574px;
-    margin-left: auto;
-    margin-right: auto;
+    /*width: 1400px;
+    height: 574px;*/
+    width: 100%;
+    height: auto;
+    /*margin-left: auto;
+    margin-right: auto;*/
+}
+
+#content-header {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+#content-header h2{
+    color: #151c36;
+}
+
+/************************************************************INFO.HTML STYLE************************************************************/
+
+#info-contatti h1, h2 {
+    text-transform: uppercase;
+}
+
+#come-arrivare h1, h2 {
+    text-transform: uppercase;
+}
+
+#come-arrivare ul {
+    margin: 1em;
+    padding: 0;
 }
