--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
     padding: 0;
 }
 
-/*FORM DI REGISTRAZIONE*/
+/*FORM DI REGISTRAZIONE, alberto*/ 
 
 * {box-sizing: border-box}
 
@@ -146,12 +146,10 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 }
 
-
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
-
 
 .registerbtn {
   background-color: #82a4b3;
