--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Lexend', sans-serif;
 }
 
+h2{
+    color: #151c36;
+}
+
 #header {
     /*background-color: #7de1ee;*/
     background-color: #82a4b3;
@@ -86,6 +90,9 @@ body {
     font-weight: 500;
 }
 
+/*****************************************************************HOME*****************************************************************/
+
+
 #img-banner {
     display: block;
     /*width: 1400px;
@@ -122,7 +129,7 @@ body {
     padding: 0;
 }
 
-/*FORM DI REGISTRAZIONE, alberto*/ 
+/*********************************************************FORM DI REGISTRAZIONE*********************************************************/
 
 * {box-sizing: border-box}
 
@@ -177,6 +184,4 @@ a {
   text-align: center;
 }
 
-h2{
-    color: #151c36;
-}
+/*****************************************************************PISTE*****************************************************************/
